tests/baselines/reference/templateStringInDivision.errors.txt
templateStringInDivision.ts(1,9): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.


==== templateStringInDivision.ts (1 errors) ====
    var x = `abc${ 1 }def` / 1;
            ~~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.